<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
    <item android:title="Communication">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:title="Contact Us"
                android:icon="@drawable/ic_baseline_contact">
            </item>
            <item
                android:id="@+id/about_us"
                android:title="About Us"
                android:icon="@drawable/ic_baseline_about">
            </item>
            <item
                android:id="@+id/share_app"
                android:title="Share App"
                android:icon="@drawable/ic_baseline_share">
            </item>
        </menu>
    </item>
</menu>