<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/stores_image"
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:paddingBottom="10dp"
        android:adjustViewBounds="true"
        android:layout_height="150dp"
        android:contentDescription="@string/stores_images">
    </ImageView>
    <TextView
        android:id="@+id/stores_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_name"
        android:textColor="#FF1493"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_below="@id/stores_image"
        android:layout_centerHorizontal="true"
        android:theme="@style/ThemeOverlay.AppCompat.Light">
    </TextView>
        <TextView
            android:id="@+id/store_open_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_daily_from_7_00_a_m"
            android:textColor="#FFC0CB"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:drawableStart="@drawable/ic_baseline_access_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_below="@id/stores_name"
            android:layout_marginTop="2dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light">
        </TextView>
        <TextView
            android:id="@+id/store_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stores_description"
            android:textColor="#FF1493"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_below="@id/store_open_time"
            android:layout_marginBottom="8dp"
            android:layout_centerHorizontal="true"
            android:theme="@style/ThemeOverlay.AppCompat.Light">
        </TextView>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/store_description"
            android:background="@color/grey">
        </View>
        <RatingBar
            android:id="@+id/stores_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:numStars="5"
            android:stepSize="0.25"
            android:theme="@style/RatingBar"
            android:layout_below="@id/store_description">
        </RatingBar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_below="@+id/stores_rating">

            <ImageButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="storeLiked"
                android:src="@drawable/ic_baseline_thumb_up"
                android:contentDescription="@string/share"
                android:padding="10dp"/>

            <ImageButton
                android:id="@+id/comment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_add_comment"
                android:contentDescription="@string/comment"
                android:padding="10dp"/>

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_share"
                android:contentDescription="@string/like"
                android:padding="10dp"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>