<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/pastries_image"
            android:layout_width="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/pastries_image"
            android:layout_height="150dp">
        </ImageView>
        <TextView
            android:id="@+id/pastries_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pastries_title"
            android:textColor="#FF1493"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_below="@id/pastries_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light">
        </TextView>
        <TextView
            android:id="@+id/pastries_prep_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prep_time"
            android:textColor="#FFC0CB"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_baseline_access_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_below="@id/pastries_title"
            android:layout_marginTop="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light">
        </TextView>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/pastries_prep_time"
            android:background="@color/grey">
        </View>
        <TextView
            android:id="@+id/pastries_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pastries_short_description"
            android:textColor="#FF1493"
            android:textStyle="italic"
            android:padding="8dp"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_below="@id/divider"
            android:layout_marginTop="3dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light">
        </TextView>
    </RelativeLayout>

</androidx.cardview.widget.CardView>